# LLMRAGcreatetool

./: .gitignore  README.md  README_zh.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish-npm.yml  publish-pypi.yml  publish-vscode.yml
adapters/: __init__.py  base.py  claude_code_subprocess.py  openclaw_plugin.py
cli/: __init__.py  llmrag.py
daemon/: __init__.py  __main__.py  app.py  job_store.py  pipeline_runner.py  workspace_manager.py
docs/: adapters.md  custom-chunker-api.md  extension-author-guide.md  jetbrains-plugin.md  publishing.md
examples/: demo_multiProvider.py  demo_pipeline.py
jetbrains-plugin/: build.gradle.kts  settings.gradle.kts
mcp_server/: __init__.py  __main__.py  client.py  integration_configs.py  server.py
npm/llmrag-client/: package-lock.json  package.json
src/: __init__.py  __main__.py  config.py  pipeline.py
src/extensions/: __init__.py  base.py  registry.py
src/extractors/: __init__.py  docx_extractor.py  md_extractor.py  ocr_extractor.py  pdf_extractor.py
src/indexers/: __init__.py  retriever.py  vector_store.py
src/integrations/: __init__.py  embedding_model.py  minimax_api.py
src/processors/: __init__.py  chunker.py  classifier.py  quality.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  minimax_provider.py  ollama_provider.py  openai_provider.py  qwen_provider.py  registry.py  zhipu_provider.py
tests/: test_mcp_integration_configs.py  test_mcp_server_tools.py
vscode-extension/: esbuild.js  package-lock.json  package.json  tsconfig.json
(+24 files in other folders)
